--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+
+
+    "start": "budo main.js:dist/bundle.js --live --host localhost",
+    "watch": "watchify main.js -v --debug -o dist/bundle.js",
+    "prep": "yarn && mkdirp dist",
+    "lint": "eslint main.js --fix",
+    // "deploy": "yarn build && uglifyjs dist/bundle.js -c -m -o dist/bundle.min.js"
   },
   "hexo": {
     "version": "4.2.0"
@@ -28,14 +35,7 @@
 
 
 
-  "scripts": {
-    "start": "budo main.js:dist/bundle.js --live --host localhost",
-    "watch": "watchify main.js -v --debug -o dist/bundle.js",
-    "prep": "yarn && mkdirp dist",
-    "build": "browserify main.js -o dist/bundle.js",
-    "lint": "eslint main.js --fix",
-    "deploy": "yarn build && uglifyjs dist/bundle.js -c -m -o dist/bundle.min.js"
-  },
+  
   "browserify": {
     "transform": [
       [
